# orez

./: .gitignore  .npmignore  .oxfmtrc.jsonc  .oxlintrc.json  CONSOLIDATION-RESUME.md  Cargo.toml  LICENSES.txt  README.md  about.toml  bunfig.toml  mise.toml  package.json  test-repl.mjs  tsconfig.json  vitest.config.ts
.claude/: claude.md  perf-log.md  ralph-loop.local.md
.github/workflows/: ci.yml  deployed-qualification.yml  nightly.yml  release-sync-native.yml  release.yml  rust-differential-nightly.yml
crates/soot-native/: Cargo.toml
crates/soot-native/src/: main.rs
crates/sync-core/: Cargo.toml
crates/sync-core/proptest-regressions/: README.md
crates/sync-core/src/: db.rs  error.rs  lib.rs  pull.rs  push.rs  schema.rs  store.rs  upstream.rs  value.rs  visibility.rs  wire.rs
crates/sync-core/src/query/: ast.rs  compile.rs  membership.rs  mod.rs  opacity.rs  qpull.rs  transaction.rs
crates/sync-core/tests/: chat_snapshot_bench.rs  differential.rs  encryption_guards.rs  engine_invariants.rs  model.rs  paged_snapshot.rs  query_ast.rs  query_chat_permissions.rs  query_chat_shapes.rs  query_membership.rs  query_model.rs  query_narrowing.rs  query_pull.rs  query_related.rs  query_windowed_corpus.rs  reference_delta.rs  schema_hardening.rs  soot_composition.rs  transaction_query.rs  upstream.rs  upstream_corpus.rs
crates/sync-core/tests/common/: mod.rs
crates/sync-core/ts-oracle/: run-oracle.ts
crates/sync-native/: Cargo.toml
crates/sync-native/src/: db.rs  engine.rs  fault.rs  fixture.rs  lib.rs  main.rs  namespace.rs  obs.rs  retain.rs  seed.rs  server.rs  standalone.rs  wake.rs
crates/sync-native/tests/: library_api.rs  seed-golden.json
crates/sync-wasm/: Cargo.toml
crates/sync-wasm/src/: lib.rs
crates/sync-wasm/tests/: node_sqlite.js  wasm_surface.rs
demo/: .gitignore  playwright.config.ts
demo/public/: index.html
demo/src/: backend.ts  server.ts
docs/: rca-2026-07-14-unlanded-reliability-work.md  releasing.md
docs/sync/: README.md  architecture.md  configuration.md  consumers.md  delegation.md  lane-red-proof.md  mutation-matrix.md  native-releases.md  nemesis-red-proof.md  query-oracle-red-proof.md  sqlite-zql-transaction-query-contract.md  sync-wasm-red-proof.md  testing.md  trade-offs.md
harness/: .gitignore  README.md  package.json
perf/: CF-DO-FINDINGS.md  PLAN.md  run.sh
pg-to-sqlite/: README.md  package.json
plans/: cf-do-idle-hibernation.md  cf-durable-stream-progress.md  chat-m4c-dataset-report.md  chat-query-inventory.md  consistency-hardening-plan.md  consistency-validation-architecture.md  debug-zero-lock.md  fix-fully.md  fresh-namespace-schema-provisioning-race.md  handoff-wasm-sqlite-shm.md  handoff-zero-1.7-canary.md  on-zero-instance-folders.md  on-zero-rails-pass.md  orez-write-amplification.md  orez-write-safeguards.md  permission-transition-lane.md  prod-wave-2026-07-11-driver.md  prod-wave-2026-07-11-monitor.md  resnapshot-schema-atomic.md  review-zero-sync-server-2026-07-09.md  rust-sqlite-zero-implementation-plan.md  rust-sqlite-zero-resolved-plan.md  rust-sync-go-no-go.md  rust-sync-incident-runbook.md  rust-sync-m6-qualification.md  rust-sync-paged-snapshot.md  rust-sync-review-findings-2026-07-09.md  rust-sync-server-brief.md  rust-sync-server-execution.md  rust-sync-server-final-plan.md  rust-sync-server-plan-comparison.md  rust-sync-server-plan.md  rust-sync-upstream-ingest.md  schema-skew-graceful-degradation.md  soot-0516-initial-sync-livelock-rca.md  soot-migration-inventory.md  sync-core-server-name-mapping.md  transparent-column-encryption.md  upgrade-zero.md  upstream-zero-cache-taskid-bug.md  (+8 more)
scripts/: bootstrap-sync-native-packages.ts  cache-npm-webauth.test.ts  encryption-codec-gpui-conformance.mjs  encryption-codec-node-conformance.mjs  generate-orez-lite-evidence.test.ts  generate-orez-lite-evidence.ts  generate-synthetic-restore-sql.ts  harvest-chat-transaction-query-corpus.ts  landing-debt.sh  normalize-sync-native-licenses.ts  release-package-order.test.ts  release-package-order.ts  release.ts  set-sync-native-version.ts  setup-native-sqlite.ts  sync-native-licenses.hbs  sync-native-package.test.ts  sync-native-package.ts  sync-native-platforms.ts  test-chat-e2e.ts  test-chat-integration.ts  test-lite-integration.ts
site/: .gitignore  README.md  package.json  satteri-wasi-stub.mjs  tamagui.config.ts  tsconfig.json  vite.config.ts
sqlite-wasm/: .gitignore  Makefile  bedrock-sqlite-async.d.ts  bedrock-sqlite-browser.d.ts  bedrock-sqlite.d.ts  package.json  vitest.config.ts
src/: browser.ts  bunny-local.ts  change-tracking.ts  child-process.test.ts  child-process.ts  cli-entry.ts  cli.test.ts  cli.ts  config.test.ts  config.ts  do-sql-tracking.test.ts  do-sql-tracking.ts  fk-cascade.test.ts  fk-cascade.ts  index.ts  load-config.ts  log.ts  mutex.ts  naming.test.ts  naming.ts  native-postgres.ts  pg-proxy-browser.close.test.ts  pg-proxy-browser.copy-stream.test.ts  pg-proxy-browser.replication-close.test.ts  pg-proxy-browser.singledb.test.ts  pg-proxy-browser.ts  pg-proxy-do-backend.parity.test.ts  pg-proxy-do-backend.signal.test.ts  pg-proxy-do-backend.test.ts  pg-proxy-do-backend.ts  pg-proxy-startup-barrier.test.ts  pg-proxy.ts  pglite-ipc.test.ts  pglite-ipc.ts  pglite-manager.ts  pglite-vacuum.test.ts  pglite-web-proxy.test.ts  pglite-web-proxy.ts  pglite-web-worker.ts  pglite-worker-thread.ts  (+31 more)
(+438 files in other folders)
