[workspace]
resolver = "2"
members = [
  "crates/sync-core",
  "crates/sync-native",
  "crates/sync-wasm",
  "crates/soot-native",
]
# test-chat is a copied-in chat checkout (scripts/test-chat-e2e.ts); its
# standalone crates (rust-sync/chat-native) must not join this workspace
exclude = ["test-chat"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = true
opt-level = "s"
