[package]
name = "soot-native"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "soot-native"
path = "src/main.rs"

[dependencies]
sync-native = { path = "../sync-native" }
sync-core = { path = "../sync-core" }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
  "net",
  "time",
] }
axum = { version = "0.8" }
