[package]
name = "sync-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
# float_roundtrip: serde_json's DEFAULT float parser is ~1 ULP lossy
# (from_str(ryu(x)) can return x±1ulp), which would corrupt a client's float
# column args parsed from a request body and break invariant 1 (exact float
# round-trip). this feature makes parsing exact. it unifies workspace-wide via
# cargo, so every host that parses a body through serde gets the fix.
serde_json = { workspace = true, features = ["float_roundtrip"] }
thiserror = { workspace = true }

# rusqlite is a DEV-dependency ONLY: it is the in-memory SyncDb impl the unit,
# model, and differential tests run against. it must NEVER become a regular
# dependency — the crate must stay wasm-compilable (verified in CI with
# `cargo build --target wasm32-unknown-unknown -p sync-core`). pinned to 0.32
# (libsqlite3-sys 0.30) because 0.38+ needs the unstable cfg_select on rustc
# 1.94.
[dev-dependencies]
proptest = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
