[package]
name = "sync-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
platform-probes = []

[dependencies]
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
sync-core = { path = "../sync-core" }
wasm-bindgen = "0.2"
